--- a/TourPlanner/TourPlanner.PL/TourPlanner.PL.csproj
+++ b/TourPlanner/TourPlanner.PL/TourPlanner.PL.csproj
@@ -8,4 +8,8 @@
     <StartupObject>TourPlanner.PL.Programm</StartupObject>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TourPlanner.Models\TourPlanner.Model.csproj" />
+  </ItemGroup>
+
 </Project>
