--- a/TourPlanner/TourPlanner.PL/TourPlanner.PL.csproj
+++ b/TourPlanner/TourPlanner.PL/TourPlanner.PL.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TourPlanner.BL\TourPlanner.BL.csproj" />
     <ProjectReference Include="..\TourPlanner.Models\TourPlanner.Model.csproj" />
   </ItemGroup>
 
