added tourlog repository, added config file. config file contains username and password for database and is included in git ignore

--- a/TourPlanner/TourPlanner.PL/TourPlanner.PL.csproj
+++ b/TourPlanner/TourPlanner.PL/TourPlanner.PL.csproj
@@ -13,4 +13,10 @@
     <ProjectReference Include="..\TourPlanner.Models\TourPlanner.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="AppConfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
