added class to parse config json, updated readme config file instructions

--- a/TourPlanner/TourPlanner.DAL/TourPlanner.DAL.csproj
+++ b/TourPlanner/TourPlanner.DAL/TourPlanner.DAL.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Npgsql" Version="6.0.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TourPlanner.Common\TourPlanner.Common.csproj" />
     <ProjectReference Include="..\TourPlanner.Models\TourPlanner.Model.csproj" />
   </ItemGroup>
 
