--- a/TourPlanner/TourPlanner.PL/TourPlanner.PL.csproj
+++ b/TourPlanner/TourPlanner.PL/TourPlanner.PL.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TourPlanner.BL\TourPlanner.BL.csproj" />
     <ProjectReference Include="..\TourPlanner.Models\TourPlanner.Model.csproj" />
   </ItemGroup>
