--- a/TourPlanner/TourPlanner.BL/TourPlanner.BL.csproj
+++ b/TourPlanner/TourPlanner.BL/TourPlanner.BL.csproj
@@ -7,4 +7,8 @@
     <OutputType>Library</OutputType>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TourPlanner.DAL\TourPlanner.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
