--- a/TourPlanner/TourPlanner.PL/log4net.config
+++ b/TourPlanner/TourPlanner.PL/log4net.config
@@ -5,12 +5,13 @@
 		<appender-ref ref="file" />
 	</root>
 	<appender name="console" type="log4net.Appender.ConsoleAppender">
+	<!--<appender name="console" type="log4net.Appender.DebugAppender">-->
 		<layout type="log4net.Layout.PatternLayout">
 			<conversionPattern value="%date %level %logger - %message%newline" />
 		</layout>
 	</appender>
 	<appender name="file" type="log4net.Appender.RollingFileAppender">
-		<file value="logfile.log" />
+		<file value="tourplanner.log" />
 		<appendToFile value="true" />
 		<rollingStyle value="Size" />
 		<maxSizeRollBackups value="5" />
