--- a/TourPlanner/TourPlanner.BL/TourPlanner.BL.csproj
+++ b/TourPlanner/TourPlanner.BL/TourPlanner.BL.csproj
@@ -14,4 +14,8 @@
 		</AssemblyAttribute>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="itext7" Version="7.2.2" />
+	</ItemGroup>
+
 </Project>
